[metadata]
name = cc-clients-pkg
version = 0.01.00.000
author = Jeffrey Jonathan Jennings (J3)
author_email = j3@athej3.com
license = MIT
description = Confluent Cloud Clients Package
long_description = Confluent Cloud Clients Package
home_page = https://github.com/j3-signalroom/cc-clients-pkg
project_urls = 
    Bug Tracker = https://github.com/j3-signalroom/cc-clients-pkg/issues
    Changelog = https://github.com/j3-signalroom/cc-clients-pkg/blob/main/CHANGELOG.md
    Source Code = https://github.com/j3-signalroom/cc-clients-pkg

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.11.9
install_requires =
    attrs
    avro
    fastavro
    httpx
    setuptools
    urllib3
    requests
    wheel

[options.packages.find]
where = src
include = *.py

[aliases]
test = pytest

[tool:pytest]
norecursedirs =
    .git
    dist

python_files =
    test_*.py
    *_test.py
    tests.py

testpaths =
    tests